--- a/main.html
+++ b/main.html
@@ -1,1 +1,10 @@
+<html>
+   <head> 
+      <title>hiii loooOOser</title>
+   </head>
+   <body>
 
+      cool stuff is coming soon
+
+   </body>
+</html>
